@@ -1,2 +1,3 @@
 DIST django-activity-stream-0.4.4.tar.bz2 93170 SHA256 5ce5990397960923448c26ceda87bab410fedf1200c15dfe918efbab2a0159a0 SHA512 33595676b9088e39f95e52140df9013657e5902c50e0819a4ad6ac5b52da711188704fd236ea63e803313dec40c0e9bbff1af6105eaa7ebf0f93bafe9ab57eec WHIRLPOOL 47051a568d553f9f9acfe732575aa63c69a9afac135e1005e7dcbfe1a53b5f7fcd0240c6239aeffd6646935c0e2c05e0a8622d034317ccf083b74f24a47f6e3d
 DIST django-activity-stream-0.4.5beta1.tar.gz 24289 SHA256 007b9b63957f13fd8d431e8b1884ac4a83b47068c2cbff0ddb6cabc14504fda3 SHA512 70e1fe71f8dfee267b2c60053bec0be4ecc144e79ac4ac5e58c892a485b04b33a03a21aa5990a306435f02c28542685e914d0cdaf1e6b9225af51a6ea72bc5d7 WHIRLPOOL f93618f1354ed8277a4c7357e0f1a93e37fc3a8e800d471d5afb33eb4dffec6afc9d8ed27878e75f23787679c0d2920e92f14a3ba312ca52cd5575d6190df9bd
+DIST django-activity-stream-0.5.1.tar.gz 31105 SHA256 33b62e397378b2fc41f988b1b9752e4f5639adf35824de70c46a8a0e6bf5a55b SHA512 1a88590f596911da0529c5ee31f2267194c9687c5662b092842b1995f22563e4bc1a21e80859d19fd5cf3b91414401954f9b5ef92d40518029c6fa6bc89c6ef2 WHIRLPOOL baea4d0e6ab1a837a614240581886a8c592c270ddcaff81230858710de2f88f4a036555535b91de0de80b74ae0122ff772aa16fb1165bb6cdfa8d06c13e0c205
